ERSKY9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 25-APR-2011
description here
====================================================================================

******************************************
CHANGELOG: 24-Nov-2012  MPB
r128 Fix an editing bug and remove debug on expo screen

******************************************
CHANGELOG: 24-Nov-2012  MPB
r127 Enable GVARS with expo and dual rate

******************************************
CHANGELOG: 22-Nov-2012  MPB
r125 Tweaks to improve global variables
r126 Commit the bin file

******************************************
CHANGELOG: 21-Nov-2012  MPB
Rotary encoder now steps through all items
Current calibration moved to ANA menu
Co-processor version now on Firmware version menu
Limited Global variable functionality added

******************************************
CHANGELOG: 17-Oct-2012  MPB
MAJOR UPDATE - EEPROM structure changed
48 mixes
24 channels
24 safety/voice switches
24 custom switches
20 model memories
Automatic EEPROM structure update
Co-processor applet to rev 04, saves time every 2 hours

******************************************
CHANGELOG: 06-Oct-2012  MPB
USB Mass Storage !!
Date/Time minor bug fix
CO-Proc Temperature
Watchdog to 1.5 Seconds (from 16)

******************************************
CHANGELOG: 28-Sep-2012  MPB
Voice for thousands fixed
Some types of WAV file headers read properly now
RPM numeric display improved
Real Time Clock added to co-processor
Menu added to allow RTC to be set
Co-processor applet updated

******************************************
CHANGELOG: 21-Sep-2012  MPB
Rotary encoder improvements

******************************************
CHANGELOG: 18-Sep-2012  MPB
Add Stick analog gain option

******************************************
CHANGELOG: 18-Sep-2012  MPB
Voice file reading improved