@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
-#define DATE_STR "24.11.2012"
-#define TIME_STR "23:26:41"
-#define SUB_VERS 1436-Mike
-#define SVN_VERS "ersky9x-r128"
+#define DATE_STR "02.12.2012"
+#define TIME_STR "23:30:33"
+#define SUB_VERS 1444-Mike
+#define SVN_VERS "ersky9x-r129"
 #define MOD_VERS "REVB"
